# satellite-road-detection

./: .gitignore  README.md  pyproject.toml
configs/: run.yaml
configs/dataset/: CHN6-CUG.yaml  deepglobe.yaml  massasschusetts-roads.yaml
configs/logger/: wandb.yaml
configs/model/: attention_unet.yaml  dclsnet.yaml  linknet34.yaml  unet.yaml
configs/trainer/: default.yaml
jobs/: unet.sh
src/: data.py  logger.py  predict.py  run.py  trainer.py  utils.py
src/DCLS/construct/: modules.py
src/datasets/: __init__.py  data_chn6.py  data_deepglobe.py  data_massachusetts.py  dataset_utils.py
src/models/: dclsnet.py  dlinknet.py  dlinknet34.yaml  linknet.py  unet.py
