[project]
name = "satellite-road-detection-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "kagglehub[pandas-datasets]>=1.0.0",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.0",
]
